refactor: clean up unused imports, parameters, and dead code across system helpers and handlers